refactor: be more conservative w/preview features
Also test with virtual threads in we are using them in production.