@@ -4,10 +4,6 @@ plugins {
 	id 'refinery-java-conventions'
 }
 
-application {
-	applicationDefaultJvmArgs += '--enable-preview'
-}
-
 for (taskName in ['distTar', 'distZip', 'shadowDistTar', 'shadowDistZip']) {
 	tasks.named(taskName) {
 		enabled = false
